tests/ui/loop-match/const-continue-outside-loop-match.stderr
error: `#[const_continue]` must break to a labeled block that participates in a `#[loop_match]`
  --> $DIR/const-continue-outside-loop-match.rs:10:9
   |
LL |         break ();
   |         ^^^^^^^^

error: aborting due to 1 previous error

